--- a/index.html
+++ b/index.html
@@ -2571,42 +2571,42 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-section">
-                                <a href="products.html#writing" data-zh="✍️ 写作指南" data-en="✍️ Writing Guide" style="font-weight: bold; color: var(--accent);">✍️ 写作指南</a>
+                                <a href="products.html?category=writing" data-zh="✍️ 写作指南" data-en="✍️ Writing Guide" style="font-weight: bold; color: var(--accent);">✍️ 写作指南</a>
                                 <ul class="dropdown-submenu">
-                                    <li><a href="products.html#writing" data-zh="📝 写作模板大全（¥49）" data-en="📝 Writing Templates (¥49)">📝 写作模板大全（¥49）</a></li>
-                                    <li><a href="products.html#writing" data-zh="🎯 爆款标题库（¥39）" data-en="🎯 Viral Title Library (¥39)">🎯 爆款标题库（¥39）</a></li>
-                                    <li><a href="products.html#writing" data-zh="📬 Newsletter指南（¥39）" data-en="📬 Newsletter Guide (¥39)">📬 Newsletter指南（¥39）</a></li>
-                                    <li><a href="products.html#writing" data-zh="🎨 Notion模板（¥29）" data-en="🎨 Notion Templates (¥29)">🎨 Notion模板（¥29）</a></li>
-                                    <li><a href="products.html#payment-writing" data-zh="🔥 写作套装（¥99）" data-en="🔥 Writing Bundle (¥99)" style="font-weight: bold; color: var(--accent);">🔥 写作套装（¥99）</a></li>
+                                    <li><a href="products.html?category=writing#payment-writing-single" data-zh="📝 写作模板大全（¥49）" data-en="📝 Writing Templates (¥49)">📝 写作模板大全（¥49）</a></li>
+                                    <li><a href="products.html?category=writing#payment-writing-single" data-zh="🎯 爆款标题库（¥39）" data-en="🎯 Viral Title Library (¥39)">🎯 爆款标题库（¥39）</a></li>
+                                    <li><a href="products.html?category=writing#payment-writing-single" data-zh="📬 Newsletter指南（¥39）" data-en="📬 Newsletter Guide (¥39)">📬 Newsletter指南（¥39）</a></li>
+                                    <li><a href="products.html?category=writing#payment-writing-single" data-zh="🎨 Notion模板（¥29）" data-en="🎨 Notion Templates (¥29)">🎨 Notion模板（¥29）</a></li>
+                                    <li><a href="products.html?category=writing#payment-writing" data-zh="🔥 写作套装（¥99）" data-en="🔥 Writing Bundle (¥99)" style="font-weight: bold; color: var(--accent);">🔥 写作套装（¥99）</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown-section">
-                                <a href="products.html#goals" data-zh="🎯 目标规划" data-en="🎯 Goal Planning" style="font-weight: bold; color: var(--accent);">🎯 目标规划</a>
+                                <a href="products.html?category=goals" data-zh="🎯 目标规划" data-en="🎯 Goal Planning" style="font-weight: bold; color: var(--accent);">🎯 目标规划</a>
                                 <ul class="dropdown-submenu">
-                                    <li><a href="products.html#goals" data-zh="🎯 Notion目标系统（¥49）" data-en="🎯 Notion Goal System (¥49)">🎯 Notion目标系统（¥49）</a></li>
-                                    <li><a href="products.html#goals" data-zh="📊 年度规划模板（¥29）" data-en="📊 Annual Planning Template (¥29)">📊 年度规划模板（¥29）</a></li>
-                                    <li><a href="products.html#goals" data-zh="📈 Excel追踪表（¥19）" data-en="📈 Excel Tracker (¥19)">📈 Excel追踪表（¥19）</a></li>
-                                    <li><a href="products.html#payment-goals" data-zh="🔥 目标套装（¥79）" data-en="🔥 Goal Bundle (¥79)" style="font-weight: bold; color: var(--accent);">🔥 目标套装（¥79）</a></li>
+                                    <li><a href="products.html?category=goals#payment-goals-single" data-zh="🎯 Notion目标系统（¥49）" data-en="🎯 Notion Goal System (¥49)">🎯 Notion目标系统（¥49）</a></li>
+                                    <li><a href="products.html?category=goals#payment-goals-single" data-zh="📊 年度规划模板（¥29）" data-en="📊 Annual Planning Template (¥29)">📊 年度规划模板（¥29）</a></li>
+                                    <li><a href="products.html?category=goals#payment-goals-single" data-zh="📈 Excel追踪表（¥19）" data-en="📈 Excel Tracker (¥19)">📈 Excel追踪表（¥19）</a></li>
+                                    <li><a href="products.html?category=goals#payment-goals" data-zh="🔥 目标套装（¥79）" data-en="🔥 Goal Bundle (¥79)" style="font-weight: bold; color: var(--accent);">🔥 目标套装（¥79）</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown-section">
-                                <a href="products.html#thinking" data-zh="🧠 思维模型" data-en="🧠 Mental Models" style="font-weight: bold; color: var(--accent);">🧠 思维模型</a>
+                                <a href="products.html?category=thinking" data-zh="🧠 思维模型" data-en="🧠 Mental Models" style="font-weight: bold; color: var(--accent);">🧠 思维模型</a>
                                 <ul class="dropdown-submenu">
-                                    <li><a href="products.html#thinking" data-zh="🧠 第一性原理（¥39）" data-en="🧠 First Principles (¥39)">🧠 第一性原理（¥39）</a></li>
-                                    <li><a href="products.html#thinking" data-zh="🔄 逆向思维（¥39）" data-en="🔄 Inverse Thinking (¥39)">🔄 逆向思维（¥39）</a></li>
-                                    <li><a href="products.html#thinking" data-zh="🌐 系统思考（¥49）" data-en="🌐 Systems Thinking (¥49)">🌐 系统思考（¥49）</a></li>
-                                    <li><a href="products.html#thinking" data-zh="⚖️ 概率思维（¥39）" data-en="⚖️ Probabilistic Thinking (¥39)">⚖️ 概率思维（¥39）</a></li>
-                                    <li><a href="products.html#payment-thinking" data-zh="🔥 思维套装（¥89）" data-en="🔥 Thinking Bundle (¥89)" style="font-weight: bold; color: var(--accent);">🔥 思维套装（¥89）</a></li>
+                                    <li><a href="products.html?category=thinking#payment-thinking-single" data-zh="🧠 第一性原理（¥39）" data-en="🧠 First Principles (¥39)">🧠 第一性原理（¥39）</a></li>
+                                    <li><a href="products.html?category=thinking#payment-thinking-single" data-zh="🔄 逆向思维（¥39）" data-en="🔄 Inverse Thinking (¥39)">🔄 逆向思维（¥39）</a></li>
+                                    <li><a href="products.html?category=thinking#payment-thinking-single" data-zh="🌐 系统思考（¥49）" data-en="🌐 Systems Thinking (¥49)">🌐 系统思考（¥49）</a></li>
+                                    <li><a href="products.html?category=thinking#payment-thinking-single" data-zh="⚖️ 概率思维（¥39）" data-en="⚖️ Probabilistic Thinking (¥39)">⚖️ 概率思维（¥39）</a></li>
+                                    <li><a href="products.html?category=thinking#payment-thinking" data-zh="🔥 思维套装（¥89）" data-en="🔥 Thinking Bundle (¥89)" style="font-weight: bold; color: var(--accent);">🔥 思维套装（¥89）</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown-section">
-                                <a href="products.html#learning" data-zh="📚 学习方法" data-en="📚 Learning Methods" style="font-weight: bold; color: var(--accent);">📚 学习方法</a>
+                                <a href="products.html?category=learning" data-zh="📚 学习方法" data-en="📚 Learning Methods" style="font-weight: bold; color: var(--accent);">📚 学习方法</a>
                                 <ul class="dropdown-submenu">
-                                    <li><a href="products.html#learning" data-zh="🎓 费曼学习法（¥39）" data-en="🎓 Feynman Technique (¥39)">🎓 费曼学习法（¥39）</a></li>
-                                    <li><a href="products.html#learning" data-zh="📅 间隔重复（¥39）" data-en="📅 Spaced Repetition (¥39)">📅 间隔重复（¥39）</a></li>
-                                    <li><a href="products.html#learning" data-zh="📖 深度阅读（¥49）" data-en="📖 Deep Reading (¥49)">📖 深度阅读（¥49）</a></li>
-                                    <li><a href="products.html#learning" data-zh="🎯 知识管理（¥49）" data-en="🎯 Knowledge Management (¥49)">🎯 知识管理（¥49）</a></li>
-                                    <li><a href="products.html#payment-learning" data-zh="🔥 学习套装（¥99）" data-en="🔥 Learning Bundle (¥99)" style="font-weight: bold; color: var(--accent);">🔥 学习套装（¥99）</a></li>
+                                    <li><a href="products.html?category=learning#payment-learning-single" data-zh="🎓 费曼学习法（¥39）" data-en="🎓 Feynman Technique (¥39)">🎓 费曼学习法（¥39）</a></li>
+                                    <li><a href="products.html?category=learning#payment-learning-single" data-zh="📅 间隔重复（¥39）" data-en="📅 Spaced Repetition (¥39)">📅 间隔重复（¥39）</a></li>
+                                    <li><a href="products.html?category=learning#payment-learning-single" data-zh="📖 深度阅读（¥49）" data-en="📖 Deep Reading (¥49)">📖 深度阅读（¥49）</a></li>
+                                    <li><a href="products.html?category=learning#payment-learning-single" data-zh="🎯 知识管理（¥49）" data-en="🎯 Knowledge Management (¥49)">🎯 知识管理（¥49）</a></li>
+                                    <li><a href="products.html?category=learning#payment-learning" data-zh="🔥 学习套装（¥99）" data-en="🔥 Learning Bundle (¥99)" style="font-weight: bold; color: var(--accent);">🔥 学习套装（¥99）</a></li>
                                 </ul>
                             </li>
                             <li style="border-top: 1px solid var(--border); margin-top: 0.5rem; padding-top: 0.5rem;">
